legislation controller
